fix: center slideshow on mobile

--- a/frontend/src/styles/components/Media.module.scss
+++ b/frontend/src/styles/components/Media.module.scss
@@ -16,7 +16,6 @@
 .slideshow {
     background-color: unset !important;
     @include mixins.flexCenter;
-    height: 80%;
     width: 80%;
     position: relative;
     img, video {
